--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.110.88.42:9980/mithuntechnologies/repository/facebook-release/</url>
+	      <name>Maven web app Releases Nexus Repository</name>
+	      <url>http://65.2.127.181:8081/repository/facebook-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.110.88.42:9980/mithuntechnologies/repository/facebook-snapshot/</url>
+	      <name>Maven web app Snapshot Nexus Repository </name>
+	      <url>http://65.2.127.181:8081/repository/facebook-snaphot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
